--- a/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
+++ b/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
@@ -171,7 +171,7 @@
                         <p:commandButton value="Poništi filter" actionListener="#{pregledKorisnikaController.resetFilterDto}"
                                          id="filterreset" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
                                          ajax="true"
-                                         update="panel_filter2" icon="pi pi-replay"/>
+                                         update="panel_filter2 panel_filter1" icon="pi pi-replay"/>
                         <p:commandButton value="Pretraži" actionListener="#{pregledKorisnikaController.getFilterListKorisnik}"
                                          id="filter" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
                                          ajax="true" update="filterAdvanced"
