--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -29,16 +29,12 @@
             <p:password id="j_password"  name="j_password" required="true" label="password"  autocomplete="false"/>
 
             <f:facet name="footer">
-                <p:commandButton id="submit" value="Login" ajax="false"/>
+                <p:commandButton id="submit" value="Prijava" ajax="false"/>
             </f:facet>
         </h:panelGrid>
     </h:panelGroup>
 
-    <div class="card" style="text-align: center; padding-bottom: 10px;  padding-top: 10px;">
-        <p:link id="home_CL" href="http://localhost:9080/online-events/welcome.xhtml">
-            <p:graphicImage library="images" name="home_page.png"/>
-        </p:link>
-    </div>
+
 
     <p:separator style="width:540px; text-align: center"/>
 
@@ -48,22 +44,11 @@
         </p:link>
     </div>
 
-
-<!--    <h:panelGroup layout="block" style="text-align : center;">-->
-<!--        <p:graphicImage library="images" name="home.png" title="Dobrodošli na ONLINE EVENTS stranice!"-->
-<!--                        style="text-align : center;"/>-->
-<!--&lt;!&ndash;        <h:panelGrid columns="2" cellpadding="5" style="margin : 0 auto" >&ndash;&gt;-->
-<!--&lt;!&ndash;            <p:outputLabel for="j_username" value="Korisničko ime:" />&ndash;&gt;-->
-<!--&lt;!&ndash;            <p:inputText id="j_username"  name="j_username" required="true" label="username" />&ndash;&gt;-->
-
-<!--&lt;!&ndash;            <p:outputLabel for="j_password" value="Lozinka:" />&ndash;&gt;-->
-<!--&lt;!&ndash;            <p:password id="j_password"  name="j_password" required="true" label="password"  autocomplete="false"/>&ndash;&gt;-->
-
-<!--&lt;!&ndash;            <f:facet name="footer">&ndash;&gt;-->
-<!--&lt;!&ndash;                <p:commandButton id="submit" value="Login" ajax="false"/>&ndash;&gt;-->
-<!--&lt;!&ndash;            </f:facet>&ndash;&gt;-->
-<!--&lt;!&ndash;        </h:panelGrid>&ndash;&gt;-->
-<!--    </h:panelGroup>-->
+    <div class="card" style="text-align: center; padding-bottom: 10px;  padding-top: 10px;">
+        <p:link id="home_CL" href="http://localhost:9080/online-events/welcome.xhtml">
+            <p:graphicImage library="images" name="home_page.png"/>
+        </p:link>
+    </div>
 
 
 
