--- a/src/main/webapp/guest/registracijaKorisnika.xhtml
+++ b/src/main/webapp/guest/registracijaKorisnika.xhtml
@@ -23,30 +23,89 @@
         <h:panelGroup layout="block" style="padding-top: 20px;">
             <!--        <p:graphicImage library="images" name="home.png" title="Dobrodošli na ONLINE EVENTS stranice!"-->
             <!--                        style="text-align : center;"/>-->
-            <h:panelGrid columns="2" cellpadding="5" style="margin : 0 auto" >
-                <p:outputLabel for="j_username" value="Korisničko ime:" style="font-size: large"/>
-                <p:inputText id="j_username"  name="j_username" required="true" label="username" />
+            <p:growl id="growl" showDetail="true" />
+<!--            <h:panelGrid>-->
+<!--                <p:messages id="messages" showDetail="true" closable="true">-->
+<!--                    <p:autoUpdate/>-->
+<!--                </p:messages>-->
+<!--            </h:panelGrid>-->
 
-                <p:outputLabel for="j_password" value="Lozinka:" style="font-size: large"/>
-                <p:password id="j_password"  name="j_password" required="true" label="password"  autocomplete="false"/>
 
-                <f:facet name="footer">
-                    <p:commandButton id="submit" value="Login" ajax="false"/>
-                </f:facet>
+            <h:panelGrid id="panelGridInputForm" columns="3" cellpadding="5" style="margin : 0 auto" >
+
+                <p:outputLabel for="korisnickoImeInput" value="Korisničko ime:   "/>
+                <p:inputText id="korisnickoImeInput"
+                             value="#{pregledKorisnikaController.korisnikDto.korisnickoIme}"
+                             maxlength="20"
+                             required="false"/>
+                <p:message for="korisnickoImeInput"/>
+
+                <p:outputLabel for="imeInput" value="Ime   :   "/>
+                <p:inputText id="imeInput"
+                             value="#{pregledKorisnikaController.korisnikDto.ime}"
+                             maxlength="50" size="50"
+                             required="false">
+                </p:inputText>
+                <p:message for="imeInput"/>
+
+
+                <!--                             requiredMessage="Ime korisnika je obavezan podatak!"-->
+
+                <p:outputLabel for="prezimeInput" value="Prezime   :   "/>
+                <p:inputText id="prezimeInput"
+                             value="#{pregledKorisnikaController.korisnikDto.prezime}"
+                             maxlength="50" size="50"
+                             required="false"
+                             requiredMessage="Prezime korisnika je obavezan podatak!"/>
+                <p:message for="prezimeInput"/>
+
+                <p:outputLabel for="oibInput" value="OIB   :   "/>
+                <p:inputMask id="oibInput"
+                             value="#{pregledKorisnikaController.korisnikDto.oib}"
+                             maxlength="11"
+                             required="false"
+                             requiredMessage="OIB korisnika je obavezan podatak!"
+                             mask="99999999999" validateMask="true"/>
+                <p:message for="oibInput"/>
+
+
+                <p:outputLabel for="emailInput" value="Email   :   "/>
+                <p:inputText id="emailInput"
+                             value="#{pregledKorisnikaController.korisnikDto.email}"
+                             maxlength="50" size="50"
+                             required="false"
+                             requiredMessage="Email korisnika je obavezan podatak!"
+                />
+                <p:message for="emailInput"/>
+
+
+
+                <p:outputLabel for="password" value="Lozinka:" style="font-size: large"/>
+                <p:password id="password"
+                            required="false"
+                            value="#{pregledKorisnikaController.korisnikDto.lozinka}"/>
+                <p:message for="password"/>
+
+
+                <p:commandButton value="Registracija" actionListener="#{pregledKorisnikaController.save}" id="spremi"
+                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
+                                 update="panelGridInputForm,growl" icon="pi pi-save"/>
             </h:panelGrid>
         </h:panelGroup>
 
-        <div class="card" style="text-align: center; padding-bottom: 10px;  padding-top: 10px;">
-            <p:link id="home_CL" href="http://localhost:9080/online-events/welcome.xhtml">
-                <p:graphicImage library="images" name="home_page.png"/>
-            </p:link>
-        </div>
+
 
         <p:separator style="width:540px; text-align: center"/>
 
         <div class="card" style="text-align: center; padding-bottom: 10px;  padding-top: 10px;">
             <p:link id="home_CL1" href="http://localhost:9080/online-events/home">
                 <p><b>Već ste registirani - Prijavite se!</b></p>
+            </p:link>
+        </div>
+
+        <div class="card" style="text-align: center; padding-bottom: 10px;  padding-top: 10px;">
+            <p:link id="home_CL" href="http://localhost:9080/online-events/welcome.xhtml">
+                <p:graphicImage library="images" name="home_page.png"/>
             </p:link>
         </div>
 
