--- a/src/main/webapp/guest/registracijaKorisnika.xhtml
+++ b/src/main/webapp/guest/registracijaKorisnika.xhtml
@@ -37,7 +37,9 @@
                 <p:inputText id="korisnickoImeInput"
                              value="#{pregledKorisnikaController.korisnikDto.korisnickoIme}"
                              maxlength="20"
-                             required="false"/>
+                             required="false">
+                    <p:ajax event="change" listener="#{pregledKorisnikaController.checkUserName()}" update="panelGridInputForm,growl"/>
+                </p:inputText>
 
                 <p:outputLabel for="imeInput" value="Ime   :   "/>
                 <p:inputText id="imeInput"
@@ -58,9 +60,7 @@
                 <p:inputText id="oibInput"
                              value="#{pregledKorisnikaController.korisnikDto.oib}"
                              maxlength="11"
-                             required="false"
-                />
-
+                             required="false" />
 
                 <p:outputLabel for="emailInput" value="Email   :   "/>
                 <p:inputText id="emailInput"
