--- a/src/main/webapp/guest/registracijaKorisnika.xhtml
+++ b/src/main/webapp/guest/registracijaKorisnika.xhtml
@@ -23,13 +23,12 @@
         <h:panelGroup layout="block" style="padding-top: 20px;">
             <!--        <p:graphicImage library="images" name="home.png" title="Dobrodošli na ONLINE EVENTS stranice!"-->
             <!--                        style="text-align : center;"/>-->
-            <p:growl id="growl" showDetail="true" />
-<!--            <h:panelGrid>-->
-<!--                <p:messages id="messages" showDetail="true" closable="true">-->
-<!--                    <p:autoUpdate/>-->
-<!--                </p:messages>-->
-<!--            </h:panelGrid>-->
-
+<!--            <p:growl id="growl" showDetail="true" />-->
+            <h:panelGrid style="text-align: center;">
+                <p:messages id="messages" showDetail="true" closable="true">
+                    <p:autoUpdate/>
+                </p:messages>
+            </h:panelGrid>
 
             <h:panelGrid id="panelGridInputForm" columns="2" cellpadding="5" style="margin : 0 auto" >
 
@@ -38,7 +37,6 @@
                              value="#{registracijaKorisnikaController.korisnikDto.korisnickoIme}"
                              maxlength="20"
                              required="false">
-                    <p:ajax event="change" listener="#{registracijaKorisnikaController.checkUserName()}" update="panelGridInputForm,growl"/>
                 </p:inputText>
 
                 <p:outputLabel for="imeInput" value="Ime   :   "/>
@@ -79,7 +77,7 @@
 
                 <p:commandButton value="Registracija" actionListener="#{registracijaKorisnikaController.save}" id="spremi"
                                  style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-                                 update="panelGridInputForm,growl" icon="pi pi-save"/>
+                                 update="panelGridInputForm,messages" icon="pi pi-save"/>
             </h:panelGrid>
         </h:panelGroup>
 
