--- a/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
+++ b/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
@@ -5,6 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xml:lang="en" lang="en">
 
 
@@ -72,14 +73,21 @@
                         style="color: black; font-size:larger; font-weight:600"/>
 
             <f:facet name="options">
-                  <span class="ui-input-icon-left">
-                    <i class="pi pi-user pi-user"/>
-                    <p:inputText value="#{request.remoteUser}" readonly="true"/>
+                <span class="ui-input-icon-left">
+                    <h:form id="userDialogForm">
+                     <p:commandButton value="#{request.remoteUser}"
+                                      icon="pi pi-fw pi-user-edit"
+                                      styleClass="rounded-button ui-button-info" ajax="true"
+                                      onclick="PF('includedDialog').show();"
+                     />
+
+                    </h:form>
                 </span>
                 <input type="hidden" name="logoutExitPage" value="/welcome.xhtml"/>
-                <p:button value="Logout" icon="pi pi-fw pi-sign-out" styleClass="ui-button-info"
+                <p:button value="Odjava"
+                          icon="pi pi-fw pi-sign-out"
+                          styleClass="rounded-button ui-button-secondary"
                           onclick="document.getElementById('logout').submit()"/>
-                <!--                <a href="#" onclick="document.getElementById('logout').submit()">Logout</a>-->
             </f:facet>
 
         </p:menubar>
@@ -369,7 +377,11 @@
             </h:panelGrid>
 
         </p:panel>
+        <p:dialog global="true" id="test" widgetVar="includedDialog" header="Moji podaci"  showEffect="explode" >
 
+            <ui:include src="/secured/user/korisnikInfo.xhtml" />
+
+        </p:dialog>
     </h:form>
 
 </h:body>
